# CPP_GCC_OPEN_CV

./: .gitignore  README.md
VC16/: OpenCvApp.cpp  README.md
doc/: builderror.txt  scm.txt
mingwin/: CMakeLists.txt  CPP_GCC_OPEN_CV.dev  CPP_GCC_OPEN_CV.layout  OpenCvApp.cpp  OpenCvDll.cpp  OpenCvExe.cpp  OpenCvTest.cpp  OpenCvdLL.h  opencv.ini
mingwin/__dist/: opencv.ini
mingwin/__test/: OpenCVDll.def
